Added link to the GitHub repository

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
   </head>
   <body>
     <h1>Welcome to SouthKorea</h1>
+    <footer>
+      This project was coded by Sadiyya Khan an is
+      <a
+        href="https://github.com/Sadiyya-k/SouthKorea-travel-project"
+        target="_blank"
+        >open-sourced</a
+      >
+    </footer>
   </body>
 </html>
