--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <h1>Welcome to SouthKorea</h1>
+    <h2>Capital city Seoul</h2>
     <footer>
       This project was coded by Sadiyya Khan an is
       <a
