--- a/index.html
+++ b/index.html
@@ -14,15 +14,21 @@
     <title>Welcome to SouthKorea</title>
   </head>
   <body>
-    <h1>Welcome to SouthKorea</h1>
-    <h2>Capital city Seoul</h2>
-    <footer>
-      This project was coded by Sadiyya Khan an is
-      <a
-        href="https://github.com/Sadiyya-k/SouthKorea-travel-project"
-        target="_blank"
-        >open-sourced</a
-      >
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to SouthKorea</h1>
+        <h2>Capital city Seoul</h2>
+        <a href="more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Sadiyya Khan an is
+        <a
+          href="https://github.com/Sadiyya-k/SouthKorea-travel-project"
+          target="_blank"
+          >open-sourced</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
