--- a/index.html
+++ b/index.html
@@ -17,17 +17,66 @@
     <div class="container">
       <header>
         <h3>.TRAVEL.</h3>
-        <h1>Welcome to SouthKorea</h1>
+        <h1>Welcome to South Korea</h1>
         <h2>Capital city Seoul</h2>
         <a href="more">Learn more</a>
       </header>
       <footer>
-        This project was coded by Sadiyya Khan an is
-        <a
-          href="https://github.com/Sadiyya-k/SouthKorea-travel-project"
-          target="_blank"
-          >open-sourced</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More about South Korea</h3>
+            <ul>
+              <i>
+                <a href="https://www.airport.kr/ap/en/index.do" target="_blank">
+                  SouthKorea Airport website</a
+                >
+              </i>
+              <li>
+                <a
+                  href="https://goo.gl/maps/UosxrFgNgUa4JnjT9?coh=178573&entry=tt"
+                  target="_blank"
+                >
+                  Map of South Korea</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://english.visitkorea.or.kr/enu/TRP/TP_ENG_6.jsp"
+                  target="_blank"
+                >
+                  Public transport map</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+              rint, graphic or web designs.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes resposive to
+              develop my coding skills
+            </p>
+            <br />
+            This project was coded by Sadiyya Khan an is
+            <a
+              href="https://github.com/Sadiyya-k/SouthKorea-travel-project"
+              target="_blank"
+              >open-sourced</a
+            >
+          </div>
+        </section>
       </footer>
     </div>
   </body>
