Added main section and grid

--- a/index.html
+++ b/index.html
@@ -21,8 +21,44 @@
         <h2>Capital city Seoul</h2>
         <a href="more">Learn more</a>
       </header>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="images/seoultower.jpg"
+              alt="N Seoul tower"
+              class="seoultower"
+            />
+          </div>
+          <div>
+            <h2>Why South Korea</h2>
+            <h3>South Korea, the land of K-Pop</h3>
+            <p>
+              South Korea is famous for K-pop, delicious Korean foods, ancient
+              temples, and dynamic festivals. South Korea is an eastern Asian
+              country. It is located on the Korean Peninsula, with the Yellow
+              Sea on the west and the Sea of Japan on the east. Korean popular
+              music, termed K-Pop, is a versatile genre that originates in South
+              Korea. Whilst it includes a variety of styles such as pop, R&B,
+              hip-hop, and jazz, some common themes run. For example, K-Pop
+              choreography is known to have a fast tempo, predominantly
+              performed in unison. Groups also often wear vibrant, distinct
+              outfits which match the aesthetic of the group.
+            </p>
+            <p>
+              eju, the largest island in South Korea, is famous for its tranquil
+              beach resorts and delicious seafood. It is located in the Korea
+              Strait, meaning that it sits in three different seas. These are
+              the East China Sea, Japan Sea, and Yellow Sea. Jeonju is
+              considered to be the food capital of South Korea. It is famous for
+              its delicious street foods, as well as the food festivals centered
+              around them.
+            </p>
+          </div>
+        </section>
+      </main>
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-with-first-narrow">
           <div>
             <h3>More about South Korea</h3>
             <ul>
