Added a card section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img
               src="images/seoultower.jpg"
               alt="N Seoul tower"
-              class="seoultower"
+              class="image-responsive"
             />
           </div>
           <div>
@@ -54,6 +54,116 @@
               its delicious street foods, as well as the food festivals centered
               around them.
             </p>
+          </div>
+        </section>
+        <section class="secondary-section">
+          <h2 class="text-center">CAFES</h2>
+          <h3 class="text-center">My favorite cafes in South Korea</h3>
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/thanks-nature-cafe.jpg"
+                  alt=""
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Thanks Nature Cafe</h4>
+                <p>
+                  Definitely something new and different. Located close to the
+                  Hongik University’s campus in the trendy neighborhood of
+                  Hongdae, Thanks Nature Café or also known as the Sheep Café is
+                  the only place in Seoul where you can eat banana-strawberry
+                  waffles in the company of two fluffy sheep.
+                </p>
+                <h5>Address:</h5>
+                <p>10 Hongik-ro, Mapo-gu, Seoul</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Amazing cafe to have waffles at any time you like. And if you
+                  like animals here you get to pet and take pictures with 2
+                  little lambs.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/FwgZsmB7U1PnWjn58?coh=178573&entry=tt"
+                  target="_blank"
+                  class="button"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/greem-cafe.jpeg"
+                  alt=""
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Greem Cafe</h4>
+                <p>
+                  A must-see for eager cafe junkies, Greem Cafe is a cafe unlike
+                  any other. Visitors immerse themselves in the two dimensional
+                  interior of the cafe in the youthful Hongdae area. Inspired by
+                  the popular Korean animated web series W, the world of cartoon
+                  is at your fingertips.
+                </p>
+                <h5>Address:</h5>
+                <p>61-10, Seongmisan-ro, Mapo-gu, Seoul 03980</p>
+                <h5>What I like about it</h5>
+                <p>
+                  If you love a bit of uniqueness while enjoying yummy pastries
+                  then this is a must visit. Serving tasty desserts while making
+                  you feel like you'r in a comic.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/7kto1T4Z1aXyArMc6?coh=178573&entry=tt"
+                  target="_blank"
+                  class="button"
+                  >Learn More</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/pink-pool-cafe.jpg"
+                  alt=""
+                  class="image-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Pink Pool Cafe</h4>
+                <p>
+                  Pink Pool Cafe at Stylenanda’s store in Hongdae is one of the
+                  two trendy cafes Stylenanda stores have in Seoul, Hongdae.
+                  Here, you’ll find the best of the Kpop fashions, urban arts,
+                  and indie music culture, clubs and entertainment
+                </p>
+                <h5>Address:</h5>
+                <p>66-2 Chungmu-ro2ga, Jung-gu, Seoul</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Perfect cafes for the instagrammers and those with a sweet
+                  tooth. They serve a number of cool drinks, delicious cakes and
+                  desserts. And some very comfy seats.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/MCZeKNchQ7Pah3bZ9?coh=178573&entry=tt"
+                  target="_blank"
+                  class="button"
+                  >Learn More</a
+                >
+              </div>
+            </div>
           </div>
         </section>
       </main>
