Added responsive google map embeds

--- a/index.html
+++ b/index.html
@@ -61,12 +61,20 @@
           <h3 class="text-center">My favorite cafes in South Korea</h3>
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/thanks-nature-cafe.jpg"
-                  alt=""
+                  alt="Thanks Nature Cafe"
                   class="image-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.057206353297!2d126.92104917646633!3d37.55371597204189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c98c49c51ca9d%3A0x4974846e844e4c1e!2sThanks%20Nature%20Cafe!5e0!3m2!1sen!2suk!4v1685639205740!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Thanks Nature Cafe</h4>
@@ -96,12 +104,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/greem-cafe.jpeg"
-                  alt=""
+                  alt="Greem Cafe"
                   class="image-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.5690822801425!2d126.92129114090747!3d37.565215124319245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c995a95312313%3A0x66fe41bea984339f!2sGREEM%20CAFE%2C%20Seoul!5e0!3m2!1sen!2suk!4v1685642420880!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Greem Cafe</h4>
@@ -131,12 +147,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/pink-pool-cafe.jpg"
-                  alt=""
+                  alt="Pink Pool Cafe"
                   class="image-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.023469979602!2d126.92485494090705!3d37.55451082493288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c98c17c2e992b%3A0xb9206e5f808a33e8!2sPink%20Pool%20Cafe%20-%20Stylenanda%20Seoul!5e0!3m2!1sen!2suk!4v1685642542428!5m2!1sen!2suk"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Pink Pool Cafe</h4>
