Added grid row to gallery

--- a/index.html
+++ b/index.html
@@ -190,6 +190,46 @@
             </div>
           </div>
         </section>
+        <section>
+          <h2>Gallery</h2>
+          <h3>My photos from South Korea</h3>
+          <div class="row grid">
+            <div class="grid grid-3-columns">
+              <img
+                src="images/gallery/nightbuildings.jpg"
+                alt="Building night lights"
+                class="image-responsive"
+              />
+              <img
+                src="images/gallery/seouldome.jpg"
+                alt="seoul dome"
+                class="image-responsive"
+              />
+              <img
+                src="images/gallery/temple.jpg"
+                alt="Temple"
+                class="image-responsive"
+              />
+            </div>
+            <div class="grid grid-3-columns">
+              <img
+                src="images/gallery/nightbanners.jpg"
+                alt="Night banner lights"
+                class="image-responsive"
+              />
+              <img
+                src="images/gallery/waterstream.jpg"
+                alt="Waterfall and stream"
+                class="image-responsive"
+              />
+              <img
+                src="images/gallery/bridgelights.jpg"
+                alt="Bridge Lights"
+                class="image-responsive"
+              />
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="grid grid-3-columns-with-first-narrow">
