Replace images with own pics

--- a/index.html
+++ b/index.html
@@ -196,35 +196,35 @@
           <div class="row grid">
             <div class="grid grid-3-columns">
               <img
-                src="images/gallery/nightbuildings.jpg"
-                alt="Building night lights"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/084/230/original/atv_view.jpg?1685792225"
+                alt="City view from mountain"
                 class="image-responsive"
               />
               <img
-                src="images/gallery/seouldome.jpg"
-                alt="seoul dome"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/084/261/original/building_with_river-2.jpg?1685794587"
+                alt="seoul river and buildings"
                 class="image-responsive"
               />
               <img
-                src="images/gallery/temple.jpg"
-                alt="Temple"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/084/255/original/palace_view.jpg?1685793520"
+                alt="Inside palace view"
                 class="image-responsive"
               />
             </div>
             <div class="grid grid-3-columns">
               <img
-                src="images/gallery/nightbanners.jpg"
-                alt="Night banner lights"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/084/250/original/palace_hanbok.jpg?1685793486"
+                alt="Palace grounds"
                 class="image-responsive"
               />
               <img
-                src="images/gallery/waterstream.jpg"
-                alt="Waterfall and stream"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/084/260/original/pond_korea.jpg?1685794149"
+                alt="Pond in gardens of morning calm"
                 class="image-responsive"
               />
               <img
-                src="images/gallery/bridgelights.jpg"
-                alt="Bridge Lights"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/084/243/original/palace_entry.jpg?1685792630"
+                alt="Palace Entry"
                 class="image-responsive"
               />
             </div>
@@ -279,7 +279,7 @@
               develop my coding skills
             </p>
             <br />
-            This project was coded by Sadiyya Khan an is
+            This project was coded by Sadiyya Khan and is
             <a
               href="https://github.com/Sadiyya-k/SouthKorea-travel-project"
               target="_blank"
