Updated to Seoul and image background color

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <title>Welcome to SouthKorea</title>
+    <title>Welcome to Seoul - South Korea</title>
   </head>
   <body>
     <div class="container">
       <header>
         <h3>.TRAVEL.</h3>
-        <h1>Welcome to South Korea</h1>
-        <h2>Capital city Seoul</h2>
+        <h1>Welcome to Seoul</h1>
+        <h2>Capital city of South Korea</h2>
         <a href="more">Learn more</a>
       </header>
       <main>
@@ -31,34 +31,34 @@
             />
           </div>
           <div>
-            <h2>Why South Korea</h2>
-            <h3>South Korea, the land of K-Pop</h3>
+            <h2>Why Seoul?</h2>
+            <h3>Seoul, the land of K-Pop and Shopping</h3>
             <p>
-              South Korea is famous for K-pop, delicious Korean foods, ancient
-              temples, and dynamic festivals. South Korea is an eastern Asian
-              country. It is located on the Korean Peninsula, with the Yellow
-              Sea on the west and the Sea of Japan on the east. Korean popular
-              music, termed K-Pop, is a versatile genre that originates in South
-              Korea. Whilst it includes a variety of styles such as pop, R&B,
-              hip-hop, and jazz, some common themes run. For example, K-Pop
-              choreography is known to have a fast tempo, predominantly
-              performed in unison. Groups also often wear vibrant, distinct
-              outfits which match the aesthetic of the group.
+              Seoul is the birthplace of K-pop and, whether shopping for Gangnam
+              styles at the epic Starfield COEX Mall or catching a real-life
+              glimpse of your favorite K-pop stars, you can feel this global
+              phenomenon’s colorful influence, well, pretty much everywhere.
+              Seoul is also known for its fine traditional Korean handcrafts and
+              teahouses. You’ll find both in spades in the hip Insadong
+              neighborhood, where ancient hanok houses conceal atmospheric
+              tearooms and cute courtyards, and shopfronts spill over with fine
+              celadon pottery, Hanji paper lanterns, carved wooden masks and
+              more.
             </p>
             <p>
-              eju, the largest island in South Korea, is famous for its tranquil
-              beach resorts and delicious seafood. It is located in the Korea
-              Strait, meaning that it sits in three different seas. These are
-              the East China Sea, Japan Sea, and Yellow Sea. Jeonju is
-              considered to be the food capital of South Korea. It is famous for
-              its delicious street foods, as well as the food festivals centered
-              around them.
+              Seoul is one of the most exciting cities I went to during my
+              holiday in South Korea and I most certainly loved every moment I
+              spent exploring. Seoul is a great mixture of ancient traditions
+              and cutting-edge technology. The city houses many different
+              palaces (my most favourite the Gyeongbokgung Palace), temples,
+              museums, N Seoul Tower and some delicious street-food stalls that
+              include local dishes.
             </p>
           </div>
         </section>
         <section class="secondary-section">
           <h2 class="text-center">CAFES</h2>
-          <h3 class="text-center">My favorite cafes in South Korea</h3>
+          <h3 class="text-center">My favorite cafes in Seoul</h3>
           <div class="grid grid-3-columns">
             <div class="card">
               <div class="card-header grid grid-2-columns">
@@ -234,11 +234,11 @@
       <footer>
         <section class="grid grid-3-columns-with-first-narrow">
           <div>
-            <h3>More about South Korea</h3>
+            <h3>More about Seoul</h3>
             <ul>
               <i>
                 <a href="https://www.airport.kr/ap/en/index.do" target="_blank">
-                  SouthKorea Airport website</a
+                  Seoul Airport website</a
                 >
               </i>
               <li>
@@ -246,7 +246,7 @@
                   href="https://goo.gl/maps/UosxrFgNgUa4JnjT9?coh=178573&entry=tt"
                   target="_blank"
                 >
-                  Map of South Korea</a
+                  Map of Seoul</a
                 >
               </li>
               <li>
