Edited cards and gallery CSS

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   is at your fingertips.
                 </p>
                 <h5>Address:</h5>
-                <p>61-10, Seongmisan-ro, Mapo-gu, Seoul 03980</p>
+                <p>61-10, Seongmisan-ro, Mapo-gu</p>
                 <h5>What I like about it</h5>
                 <p>
                   If you love a bit of uniqueness while enjoying yummy pastries
@@ -191,8 +191,8 @@
           </div>
         </section>
         <section>
-          <h2>Gallery</h2>
-          <h3>My photos from South Korea</h3>
+          <h2 class="text-center">Gallery</h2>
+          <h3 class="text-center title">My photos from Seoul</h3>
           <div class="row grid">
             <div class="grid grid-3-columns">
               <img
