--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Seoul</h1>
         <h2>Capital city of South Korea</h2>
-        <a href="more">Learn more</a>
+        <a href="https://en.wikipedia.org/wiki/Seoul" target="_blank"
+          >Learn more</a
+        >
       </header>
       <main>
         <section class="grid grid-2-columns">
@@ -243,7 +245,7 @@
               </i>
               <li>
                 <a
-                  href="https://goo.gl/maps/UosxrFgNgUa4JnjT9?coh=178573&entry=tt"
+                  href="https://english.visitseoul.net/map-guide-book"
                   target="_blank"
                 >
                   Map of Seoul</a
@@ -262,14 +264,11 @@
           <div>
             <h3>About me</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-              sunt in culpa qui officia deserunt mollit anim id est laborum.
-              rint, graphic or web designs.
+              Hey there! My name is Sadiyya. I chose to create this page on
+              Seoul as I visited South Korea due to my love for their culture,
+              food and the beautifull historic sights it holds. Needless to say
+              I was in awe by the majestic views. Some of the beauty I could
+              capture I have shared in the above images with you.
             </p>
           </div>
           <div>
