Edited why Seoul paragraph

--- a/index.html
+++ b/index.html
@@ -41,20 +41,15 @@
               glimpse of your favorite K-pop stars, you can feel this global
               phenomenon’s colorful influence, well, pretty much everywhere.
               Seoul is also known for its fine traditional Korean handcrafts and
-              teahouses. You’ll find both in spades in the hip Insadong
-              neighborhood, where ancient hanok houses conceal atmospheric
-              tearooms and cute courtyards, and shopfronts spill over with fine
-              celadon pottery, Hanji paper lanterns, carved wooden masks and
-              more.
+              teahouses.
             </p>
             <p>
               Seoul is one of the most exciting cities I went to during my
               holiday in South Korea and I most certainly loved every moment I
-              spent exploring. Seoul is a great mixture of ancient traditions
-              and cutting-edge technology. The city houses many different
-              palaces (my most favourite the Gyeongbokgung Palace), temples,
-              museums, N Seoul Tower and some delicious street-food stalls that
-              include local dishes.
+              spent exploring. The city houses many different palaces (my most
+              favourite the Gyeongbokgung Palace), temples, museums, N Seoul
+              Tower and some delicious street-food stalls that include local
+              dishes.
             </p>
           </div>
         </section>
