--- a/index.html
+++ b/index.html
@@ -269,16 +269,14 @@
           <div>
             <h3>About this website</h3>
             <p>
-              I created this page as part of a project for SheCodes resposive to
-              develop my coding skills
+              This page was created by Sadiyya Khan as part of a project for
+              SheCodes resposive to develop coding skills and is
+              <a
+                href="https://github.com/Sadiyya-k/SouthKorea-travel-project"
+                target="_blank"
+                >open-sourced</a
+              >.
             </p>
-            <br />
-            This project was coded by Sadiyya Khan and is
-            <a
-              href="https://github.com/Sadiyya-k/SouthKorea-travel-project"
-              target="_blank"
-              >open-sourced</a
-            >
           </div>
         </section>
       </footer>
