Edited footer link margins

--- a/index.html
+++ b/index.html
@@ -234,13 +234,18 @@
             <h3>More about Seoul</h3>
             <ul>
               <i>
-                <a href="https://www.airport.kr/ap/en/index.do" target="_blank">
+                <a
+                  href="https://www.airport.kr/ap/en/index.do"
+                  class="gap"
+                  target="_blank"
+                >
                   Seoul Airport website</a
                 >
               </i>
               <li>
                 <a
                   href="https://english.visitseoul.net/map-guide-book"
+                  class="gap"
                   target="_blank"
                 >
                   Map of Seoul</a
@@ -249,6 +254,7 @@
               <li>
                 <a
                   href="https://english.visitkorea.or.kr/enu/TRP/TP_ENG_6.jsp"
+                  class="gap"
                   target="_blank"
                 >
                   Public transport map</a
